--- a/src/main/resources/com/github/paweluks/currencyconverter/currency-converter-view.fxml
+++ b/src/main/resources/com/github/paweluks/currencyconverter/currency-converter-view.fxml
@@ -4,14 +4,20 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="240.0" prefWidth="420.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.paweluks.currencyconverter.CurrencyConverterController">
    <children>
       <TextField fx:id="textField1" layoutX="64.0" layoutY="108.0" prefHeight="25.0" prefWidth="91.0" />
       <TextField fx:id="textField2" layoutX="64.0" layoutY="152.0" prefHeight="25.0" prefWidth="91.0" />
-      <Label fx:id="label2" layoutX="94.0" layoutY="67.0" prefHeight="17.0" prefWidth="241.0" text="" />
-      <Label fx:id="label1" layoutX="94.0" layoutY="43.0" prefHeight="17.0" prefWidth="241.0" text="" />
-      <ComboBox fx:id="comboBox1" layoutX="183.0" layoutY="108.0" prefHeight="25.0" prefWidth="184.0" />
-      <ComboBox fx:id="comboBox2" layoutX="183.0" layoutY="152.0" prefHeight="25.0" prefWidth="184.0" />
+      <Label fx:id="label1" layoutX="63.0" layoutY="35.0" prefHeight="17.0" prefWidth="350.0" />
+      <Label fx:id="label2" layoutX="63.0" layoutY="52.0" prefHeight="17.0" prefWidth="350.0" style="-fx-font-size: 32px;" />
+      <ComboBox fx:id="comboBox1" editable="false" layoutX="183.0" layoutY="108.0" prefHeight="25.0" prefWidth="184.0" />
+      <ComboBox fx:id="comboBox2" editable="false" layoutX="183.0" layoutY="152.0" prefHeight="25.0" prefWidth="184.0" />
+      <Label fx:id="label3" layoutX="64.0" layoutY="197.0" prefHeight="17.0" prefWidth="350.0" textFill="#14ff6e">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
